--- a/index.css
+++ b/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Add this for Quill custom font */
+.ql-font-times-new-roman {
+  font-family: 'Times New Roman', Times, serif;
+}
+
 @layer components {
     .input-field {
         @apply appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 bg-white placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm;
